--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+    <title>Ashley's Rainbow</title><!-- the title is what appears on your tab -->
     <link rel="stylesheet" type="text/css" href="main.css">
     
   </head>
+  
+  
 
   <body><!-- the body element is where everything we will see on the page will go -->
-    
+    <h1>Wow! A RAINBOW!!!</h1>
     <!-- our soon to be beautiful rainbow! -->
     <div id="red"> <!-- the grandest grandparent div -->
       <div id="orange">
