--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body><!-- the body element is where everything we will see on the page will go -->
     <h1>Wow! A RAINBOW!!!</h1>
+    <h2>Jackie rocks.</h2>
     <!-- our soon to be beautiful rainbow! -->
     <div id="red"> <!-- the grandest grandparent div -->
       <div id="orange">
